--- a/style.css
+++ b/style.css
@@ -1,61 +1,61 @@
 body {
     background: linear-gradient(to right, #859399, #283843);
 }
+
 .navbar {
     background: linear-gradient(to right, #859399, #283843);
 
 }
 
 .nav-link {
-    padding-bottom: 5px; 
-    border-bottom: 4px solid transparent; 
-    transition: border-color 0.3s ease; 
+    padding-bottom: 5px;
+    border-bottom: 4px solid transparent;
+    transition: border-color 0.3s ease;
 }
 
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
-    border-color: #000000; 
+    border-color: #000000;
 }
 
 .navbar-nav .dropdown .nav-link {
     border-bottom: none;
-    transition: border-bottom 0s ease; 
+    transition: border-bottom 0s ease;
 }
 
 .navbar-nav .dropdown:hover .nav-link,
 .navbar-nav .dropdown .nav-link:hover {
-    border-bottom: 4px solid #000000; 
+    border-bottom: 4px solid #000000;
 }
 
 .dropdown-submenu .dropdown-menu {
     top: 0;
     left: 100%;
     margin-top: 0;
-    margin-left: 0.1rem; 
+    margin-left: 0.1rem;
 }
 
 #box-search {
     display: none;
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente */
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 5px;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     width: 100%;
-    /* Centrar los elementos de la barra de búsqueda */
     text-align: center;
 }
 
 #box-search a {
-    color: black; /* Cambiar el color del texto a negro */
-    text-decoration: none; /* Eliminar el subrayado */
-    display: block; /* Alinear los elementos en bloques */
-    padding: 5px 0; /* Añadir espacio entre los elementos */
+    color: black;
+    text-decoration: none;
+    display: block;
+    padding: 5px 0;
 }
 
 #box-search a:hover {
-    color: #333; /* Cambiar el color del texto al pasar el cursor */
+    color: #333;
 }
 
 
@@ -69,6 +69,7 @@ body {
     margin: auto;
     margin-top: 5%;
 }
+
 .carousel-item img {
     height: 20%;
     border: 15px;
@@ -92,8 +93,8 @@ body {
     width: 69%;
     height: 400px;
     margin: auto;
-    margin-top: 60px; 
-    margin-bottom: 20px; 
+    margin-top: 60px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -102,7 +103,7 @@ body {
 }
 
 .carousel-item2 {
-    height: auto; 
+    height: auto;
 }
 
 .titulo {
@@ -114,11 +115,11 @@ body {
 }
 
 .titulo-line {
-    border: 0; 
+    border: 0;
     border-top: 1px solid #000;
     position: absolute;
     width: 100%;
-    top: 100%; 
+    top: 100%;
     left: 0;
 }
 
@@ -148,7 +149,7 @@ body {
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
 .txt_field {
@@ -164,15 +165,15 @@ body {
     border-bottom: 1px solid #d9d9d9;
 }
 
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label {
+.txt_field input:focus~label,
+.txt_field input:valid~label {
     top: -18px;
     font-size: 14px;
     color: #007bff;
 }
 
-.txt_field input:focus ~ .error,
-.txt_field input:valid ~ .error {
+.txt_field input:focus~.error,
+.txt_field input:valid~.error {
     display: none;
 }
 
@@ -250,18 +251,18 @@ body {
 }
 
 .centro-ayuda {
-    list-style-type: none; 
-    padding: 0; 
+    list-style-type: none;
+    padding: 0;
 }
 
 .centro-ayuda li {
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 }
 
 label[for="perfil"] {
-    display: block; 
-    margin-bottom: 5px; 
-    font-weight: bold; 
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
 
 .perfil-h1 {
@@ -269,15 +270,15 @@ label[for="perfil"] {
 }
 
 .profile-image-container {
-    width: 100px; /* Ajusta este valor según tu preferencia */
-    height: 100px; /* Ajusta este valor según tu preferencia */
+    width: 100px;
+    height: 100px;
     overflow: hidden;
-    border-radius: 15%; /* Para hacerlo circular */
-    margin: 0 auto; /* Para centrarlo horizontalmente */
+    border-radius: 15%;
+    margin: 0 auto;
 }
 
 .profile-image-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: cover;
 }
